@@ -1,4 +1,5 @@
  --- SVN ---
+ bug: If a plugin does not properly define a message, the Cacti UI will break
 
  --- 2.9 - 3.0 ---
  bug: Prevent filters from affecting plugin links, data_sources.php
